# kosh-sdk

./: .gitignore  README.md  ROADMAP.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInput.tsx  Layout.tsx  Message.tsx  ServerStatus.tsx  Sidebar.tsx  SidebarChatInput.tsx
frontend/src/pages/: Index.tsx
marlin/: Caddyfile  docker-compose copy.yaml  docker-compose-caddy.yaml  docker-compose.yaml
mcp/: main.py  pyproject.toml  weather.py  workspace.toml
mcp-client/: pyproject.toml
mcp-math-example/: .dockerignore  Caddyfile  Dockerfile  Dockerfile-ngrok  docker-compose.yaml  package-lock.json  package.json  vite.config.ts
mcp-math-example/src/api/: index.ts
mcp-servers/mcp-brave/: Dockerfile  index.html  package.json  wrangler.json
mcp-servers/mcp-github/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
mcp-servers/mcp-nilrag/: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.sh  server.py
mcp-servers/mcp-nilrag-remote/: package.json
mcp-servers/mcp-nilrag-server/: Dockerfile  docker-compose.yml
mcp-servers/mcp-nilrag-ts/: run_server.sh  tsconfig.json
mcp-servers/mcp-slack/: Dockerfile  index.html  package.json
mcp-servers/old-mcp-nilrag-ts/: README.md  package-lock.json  package.json
mcp/mcp-client/: client.py
mcp/mcp-server/: main.py
mcp/weather_mcp/: __init__.py
sdk/: example.py  tool_splitter.py
sdk/fast_api_server/: main_server.py
sdk/mcp_server/: main_mcp_server.py
(+27 files in other folders)
